# OpenFace_Python

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  OpenFace_vs2017.sln  README.md  appveyor.yml  download_models.ps1  install.sh
exe/FaceLandmarkImg/: FaceLandmarkImg.cpp  FaceLandmarkImg.vcxproj
exe/FaceLandmarkVid/: FaceLandmarkVid.cpp  FaceLandmarkVid.vcxproj
exe/FaceLandmarkVidMulti/: FaceLandmarkVidMulti.cpp  FaceLandmarkVidMulti.vcxproj
exe/FeatureExtraction/: FeatureExtraction.cpp  FeatureExtraction.vcxproj
exe/Recording/: Record.cpp  Recording.vcxproj
exe/releases/: package_windows_executables.m
gui/OpenFaceOffline/: OpenFaceOffline.csproj
lib/local/CppInerop/: CppInerop.vcxproj
lib/local/FaceAnalyser/: CMakeLists.txt  FaceAnalyser.vcxproj
lib/local/GazeAnalyser/: CMakeLists.txt  GazeAnalyser.vcxproj
lib/local/LandmarkDetector/: CMakeLists.txt  LandmarkDetector.vcxproj  landmarkDetector.i  opencv.i
lib/local/LandmarkDetector/include/: FaceDetectorMTCNN.h  Face_utils.h  LandmarkDetectionValidator.h  LandmarkDetectorFunc.h  LandmarkDetectorModel.h  LandmarkDetectorParameters.h  LandmarkDetectorUtils.h  PDM.h
lib/local/LandmarkDetector/opencv/: point3.i
lib/local/LandmarkDetector/opencv/detail/: point3-3_0_0.i  point3.i
lib/local/LandmarkDetector/src/: FaceAnalyser.cpp  FaceAnalyserParameters.cpp  FaceDetectorMTCNN.cpp  Face_utils.cpp  GazeEstimation.cpp  LandmarkDetectionValidator.cpp  LandmarkDetectorFunc.cpp  LandmarkDetectorModel.cpp  LandmarkDetectorParameters.cpp  LandmarkDetectorUtils.cpp  PDM.cpp  Patch_experts.cpp  SVM_dynamic_lin.cpp  SVM_static_lin.cpp  SVR_dynamic_lin_regressors.cpp  SVR_static_lin_regressors.cpp
lib/local/Utilities/: CMakeLists.txt  Utilities.vcxproj  Utilities.vcxproj.filters  utilities.i
lib/local/Utilities/include/: RecorderOpenFace.h  RecorderOpenFaceParameters.h  SequenceCapture.h
lib/local/Utilities/src/: RecorderOpenFace.cpp  RecorderOpenFaceParameters.cpp  SequenceCapture.cpp
matlab_runners/Action Unit Experiments/results/: BP4D_valid_res_class.txt  BP4D_valid_res_int.txt  Bosphorus_res_class.txt  Bosphorus_res_int.txt  DISFA_valid_res.txt  FERA2011_res_class.txt  SEMAINE_valid_res.txt
matlab_runners/Feature Point Experiments/results/: 300VW_OpenFace.mat  fps_yt.txt  landmark_detections.mat  landmark_detections.txt
matlab_runners/Gaze Experiments/: mpii_1500_errs.mat  mpii_1500_errs.txt
matlab_runners/Head Pose Experiments/results/: Pose_OF_CECLM.mat  Pose_OF_CECLM.txt  Pose_OF_CLNF.mat  Pose_OF_CLNF.txt
